fixed overflow-y issue

--- a/frontend/src/components/MainPage/MessengerModal/MessengerModal.css
+++ b/frontend/src/components/MainPage/MessengerModal/MessengerModal.css
@@ -183,7 +183,7 @@
 }
 
 .all-messages {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     height: 90%;
 }
